float_eq/tests/derive_tests/ulps_tol/ulps_tol_generic.stderr
error: This trait does not yet support derive for generic types.
 --> $DIR/ulps_tol_generic.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol)]
  |                                         ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FloatEqUlpsTol` (in Nightly builds, run with -Z macro-backtrace for more info)
