float_eq/tests/derive_tests/ulps_tol/ulps_tol_generic.rs
use float_eq::FloatEqUlpsTol;

#[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol)]
struct MyComplexUlps<T> {
    re: T,
    im: T,
}

fn main() {}
